src/blocks/ModalWithForm.css
.modal {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: rgba(0, 0, 0, 0.5);
}

.modal__content {
  background-color: #fff;
  max-width: 440px;
  width: 100%;
  height: 436px;
  border-radius: 20px;
  padding: 28px 28px 0 28px;
  position: relative;
  font-family: "Familjen Grotesk", sans-serif;
  font-weight: 700;
  font-size: 16px;
  line-height: 20px;
}

.modal__content_preview {
  height: 610px;
  max-width: 498px;
  width: 100%;
  padding: 0;
}

.modal__title {
  font-size: 16px;
  margin: 0 0 24px 0;
}

.modal__labels {
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.modal__label {
  display: flex;
  flex-direction: column;
}

.modal__paragraph {
  margin: 24px 0 12px 0;
}

.modal__radios {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.modal__radio {
  display: flex;
  gap: 11px;
}

.modal__input-radio {
  width: 16px;
  height: 16px;
  margin: 2px 0 0 0;
  accent-color: #000;
}

.modal__button-submit {
  margin: 32px 0 0 0;
  padding: 0;
  background: #000;
  border: none;
  font-size: 16px;
  font-family: "Familjen Grotesk", sans-serif;
  color: #fff;
  width: 124px;
  height: 36px;
  text-align: center;
  line-height: 20px;
}

.modal__button-close {
  border: none;
  background: none;
  position: absolute;
  top: 23px;
  right: 31px;
  z-index: 1;
}

.modal__button-close:hover {
  cursor: pointer;
}

.modal__image-preview {
  border-radius: 20px 20px 0 0;
  max-width: 498px;
  width: 100%;
  height: 498px;
}

.modal__text-preview {
  padding: 20px 0 0 32px;
  display: flex;
  flex-direction: column;
  gap: 12px;
  font-family: "Familjen Grotesk", sans-serif;
  font-weight: 700;
  font-size: 20px;
  line-height: 24px;
}

.modal__text-container {
  display: flex;
  flex-wrap: nowrap;
  gap: 218px;
}

.modal__button-delete {
  width: 101px;
  height: 24px;
  font-family: "Familjen Grotesk", sans-serif;
  font-weight: 700;
  font-size: 20px;
  line-height: 24px;
  border: none;
  color: #ff4d00;
  background-color: #fff;
  cursor: pointer;
  margin-top: 15px;
}

.modal__input {
  border: none;
  border-bottom: solid #000 1px;
  max-width: 440px;
  padding: 8px 0 4px 0;
  width: 100%;
  font-family: "Familjen Grotesk", sans-serif;
  font-size: 16px;
}

.modal__button-confirm {
  border: none;
  color: #ff4d00;
  background-color: #fff;
  cursor: pointer;
  font-family: "Familjen Grotesk", sans-serif;
  font-size: 20px;
  line-height: 24px;
}

.modal__button-cancel {
  background-color: #fff;
  border: none;
  cursor: pointer;
  font-size: 20px;
  font-family: "Familjen Grotesk", sans-serif;
  line-height: 24px;
}

.modal__buttons-confirm {
  display: flex;
  flex-direction: column;
  margin-top: 40px;
  gap: 24px;
}

.modal__confirm-content {
  position: relative;
  font-family: "Familjen Grotesk", sans-serif;
  font-weight: 700;
  font-size: 20px;
  line-height: 24px;
  margin-bottom: 24px;
}

.modal__text-confirm {
  align-items: center;
}

.modal__confirm {
  display: flex;
  justify-content: center;
  text-align: center;
  flex-direction: column;
  position: absolute;
  background: #fff;
  max-width: 670px;
  height: 280px;
  border-radius: 20px;
  padding: 60px;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;


}

